stop column 4 from wrapping early

--- a/style.css
+++ b/style.css
@@ -2207,7 +2207,7 @@ Media Queries
 	}
 	
 	.footer-widgets-4 {
-		width: 450px;
+		width: 320px;
 	}
 	
 	.home-widgets .featuredpage .widget-wrap {
